integrated the swagger to api
